# update-your-readme

./: .gitignore  Makefile  NOTES.md  Pipfile  README.md  action.yml  pyproject.toml  pytest.ini
.github/workflows/: close_stale_prs.yml  readme_feedback.yml  run_tests.yml  suggest_readme_updates.yml
docs/: README.md
src/: close_stale_prs.sh  core.py  main.py  poc_github_models.ipynb  poc_length_calibration.ipynb  test_github.ipynb  test_many.ipynb  test_popular_repos.ipynb
