[project]
name = "update-your-readme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyGithub",
    "requests",
    "python-dotenv",
    "langchain",
    "langchain-anthropic",
    "langchain-openai",
    "pydantic"
]

[dependency-groups]
dev = [
    "pytest",
    "jupyter",
    "ipykernel",
    "black"
]
